actioning review comments & adding all documents to PcsCase via PCSCaseView